--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -4,9 +4,9 @@ runs:
   using: "composite"
   steps:
     - uses: actions/checkout@v3
-    - name: Install linux dependencies
-      run: sudo apt-get install -y clang libssl-dev llvm libudev-dev protobuf-compiler
-      shell: bash
+    # - name: Install linux dependencies
+    #   run: sudo apt-get install -y clang libssl-dev llvm libudev-dev protobuf-compiler
+      # shell: bash
     - name: Install Rust
       run: |
         rustup update stable --no-self-update
