--- a/pallets/living-assets-ownership/Cargo.toml
+++ b/pallets/living-assets-ownership/Cargo.toml
@@ -35,7 +35,8 @@ default = ["std"]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
 	"frame-system/runtime-benchmarks",
-	"frame-support/runtime-benchmarks"
+	"frame-support/runtime-benchmarks",
+	"sp-runtime/runtime-benchmarks",
 ]
 std = [
 	"parity-scale-codec/std",
@@ -51,5 +52,6 @@ std = [
 ]
 try-runtime = [
 	"frame-system/try-runtime",
-	"frame-support/try-runtime"
+	"frame-support/try-runtime",
+	"sp-runtime/try-runtime",
 ]
